updates on users controller

--- a/TheTravellerBulgaria/src/main/webapp/AddDestination.html
+++ b/TheTravellerBulgaria/src/main/webapp/AddDestination.html
@@ -132,7 +132,7 @@
                                 <a href="SectionUnderConstructionPage.html">About</a> |
                                 <a href="SectionUnderConstructionPage.html">Sidebar</a> |
                                 <a href="SectionUnderConstructionPage.html">Contact</a> |
-                                <b><a href="SignUp.jsp">Sign up</a></b>
+                                <b><a href="SignUp.html">Sign up</a></b>
                             </p>
                         </div>
                     </div>
