--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -51,9 +51,9 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>							
-					<div id="userButton">		
+					<li id="userButton">		
 					<script>checkForUser();</script>
-					</div>
+					</li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -227,7 +227,7 @@
 								<a href="SectionUnderConstructionPage.html">About</a> |
 								<a href="SectionUnderConstructionPage.html">Sidebar</a> |
 								<a href="SectionUnderConstructionPage.html">Contact</a> |
-								<b><a href="SignUp.jsp">Sign up</a></b>
+								<b><a href="SignUp.html">Sign up</a></b>
 							</p>
 						</div>
 					</div>
