--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -27,15 +27,16 @@
 	<script src="assets/js/html5shiv.js"></script>
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
-	
-</head>
-
-<script src="assets/js/checkForUser.js"></script>
+	<script src="assets/js/checkForUser.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
+	
+</head>
+
+
      
 <body class="home">
 	<script>$.get("initializeManager")</script>
@@ -52,7 +53,7 @@
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>							
 					<li id="userButton">		
-					<script>checkForUser();</script>
+					<script>checkForUser()</script>
 					</li>
 				</ul>
 			</div><!--/.nav-collapse -->
