Back to no Spring Singletons and no autowiring; created DestinationController

--- a/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
+++ b/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
@@ -35,11 +35,11 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.jsp">Home</a></li>					
+					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<div id="userButton">		
 					<script>checkforUser();</script>
@@ -56,7 +56,7 @@
 	<div class="container">
 		
 		<ol class="breadcrumb">
-			<li><a href="index.jsp">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li class="active">All Destinations</li>
 		</ol>
 
@@ -194,7 +194,7 @@ function showDestinations(){
 				}
 				
 				html+="<td>";
-				var destName = "<h5><a href=\"Destination.jsp?name="+ json[item].name +"\">" + json[item].name + "</a></h5>";
+				var destName = "<h5><a href=\"Destination.html?name="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
 				var imageLocation = "<img src=\"DestinationPictureServlet?destination="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 				html+=imageLocation;
