--- a/TheTravellerBulgaria/src/main/webapp/Error.html
+++ b/TheTravellerBulgaria/src/main/webapp/Error.html
@@ -9,7 +9,7 @@
 <title>OOPS!!!</title>
 </head>
 <body>
-<form class="form-signin" action="index.jsp">  
+<form class="form-signin" action="index.html">  
     <img class="make-it-fit" src="pictures\error.jpg">
     <button type="submit" style="height:80px;width:300px" class="button1">Go to Home Page</button>
     <style>
