--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -46,7 +46,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -68,7 +68,7 @@
 				<h1 class="lead">The Traveler Bulgaria</h1>
 				
 				<p><a class="btn btn-default btn-lg" href="SectionUnderConstructionPage.html">View Top Destinations</a> 
-				<a class="btn btn-action btn-lg" href="AllDestinations.jsp" >View All Destinations</a></p>
+				<a class="btn btn-action btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
 
 			</div>
 		</div>
