--- a/TheTravellerBulgaria/src/main/webapp/Destination.html
+++ b/TheTravellerBulgaria/src/main/webapp/Destination.html
@@ -3,7 +3,7 @@
     pageEncoding="utf-8"%>
 
 <%@ page import = "java.util.ArrayList" %>
-<%@ page errorPage="Error.jsp"%>
+<%@ page errorPage="Error.html"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
@@ -38,7 +38,7 @@
   	%>
 	<!-- Fixed navbar -->
 	<%if (request.getParameter("name") == null){ %>
-		<%response.sendRedirect("AllDestinations.jsp"); %>
+		<%response.sendRedirect("AllDestinations.html"); %>
 	<%} %>
 	
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
@@ -46,18 +46,18 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
 			</div>
 			
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.jsp">Home</a></li>					
-					<li><a href="AllDestinations.jsp">Destinations</a></li>
+					<li><a href="index.html">Home</a></li>					
+					<li><a href="AllDestinations.html">Destinations</a></li>
 					<%if(request.getSession().getAttribute("user") == null){ %>
 						<li><a class="btn" href="SignIn.html">SIGN IN / SIGN UP</a></li>
 					<%}else{ %>
 						<li><a class="btn" href="LogoutServlet">Logout</a></li>
-						<li><a class="btn" href="profile.jsp">PROFILE</a></li>
+						<li><a class="btn" href="profile.html">PROFILE</a></li>
 					<%} %>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -71,7 +71,7 @@
 	<div class="container">
 		
 		<ol class="breadcrumb">
-			<li><a href="index.jsp">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li class="active">Profile Page</li>
 		</ol>
 
@@ -83,7 +83,7 @@
 			<aside class="col-md-4 sidebar sidebar-left">
 						<% dest = DestinationsManager.getDestinationFromCache(request.getParameter("name")); %>
 						<%if(dest == null){ %>
-							<%request.getRequestDispatcher("AllDestinations.jsp").forward(request, response); %>
+							<%request.getRequestDispatcher("AllDestinations.html").forward(request, response); %>
 							
 						<%} %>
 				<div class="row widget">
@@ -99,7 +99,7 @@
 				</div>
 				<div class="row widget">
 					<div class="col-xs-12">						
-						<a class="btn" href="Comment.jsp?name=<%=dest.getName()%>">Add Comment</a>
+						<a class="btn" href="Comment.html?name=<%=dest.getName()%>">Add Comment</a>
 					</div>
 				</div>
 				
