--- a/TheTravellerBulgaria/src/main/webapp/SectionUnderConstructionPage.html
+++ b/TheTravellerBulgaria/src/main/webapp/SectionUnderConstructionPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="fill-screen">
- <form class="form-signin" action="index.jsp">  
+ <form class="form-signin" action="index.html">  
     <img class="make-it-fit" src="pictures\SectionUnderConstruction.png">
     <button type="submit" style="height:80px;width:300px" class="button1">Go to Home Page</button>
     <style>
