--- a/TheTravellerBulgaria/src/main/webapp/SignIn.html
+++ b/TheTravellerBulgaria/src/main/webapp/SignIn.html
@@ -28,7 +28,7 @@
 
 <body>
 	<%if(request.getSession().getAttribute("user")!=null){ %>
-		<%response.sendRedirect("profile.jsp"); %>
+		<%response.sendRedirect("profile.html"); %>
 	<%} %>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
@@ -36,12 +36,12 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.jsp">Home</a></li>
-					<li><a href="AllDestinations.jsp">Destinations</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li class="active"><a class="btn" href="SignIn.html">SIGN IN / SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -55,7 +55,7 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="index.jsp">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li class="active">User access</li>
 		</ol>
 
@@ -222,7 +222,7 @@
                 if(results == 'SUCCESS'){
                     $('#message').html("<font color='green'>You are successfully logged in. </font>")
                     setTimeout(function(){
-							window.location.href = "index.jsp";
+							window.location.href = "index.html";
 						}, 500)
                 }else if(results == 'FAILURE'){
                     $('#message').html("<font color='red'>Username or password incorrect </font>")
