--- a/TheTravellerBulgaria/src/main/webapp/SignUp.html
+++ b/TheTravellerBulgaria/src/main/webapp/SignUp.html
@@ -33,12 +33,12 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="Progressus HTML5 template"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="Progressus HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.jsp">Home</a></li>
-					<li><a href="AllDestinations.jsp">Destinations</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li class="active"><a class="btn" href="SignIn.html">SIGN IN / SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -52,7 +52,7 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="index.jsp">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li class="active">Registration</li>
 		</ol>
 
@@ -236,7 +236,7 @@ function showMessage(results){
         if(results == 'User Registration Successful!'){
             $('#message').html("<font color='green'>You have successfully registered. </font>")
             setTimeout(function(){
-					window.location.href = "SignIn.jsp";
+					window.location.href = "SignIn.html";
 				}, 500)
         }else if(results == 'Registration failed!'){
             $('#message').html("<font color='red'>Incorrect data or picture format </font>")
