--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -40,12 +40,12 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.jsp"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo4.png" alt="The Traveler Bulgaria"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.jsp">Home</a></li>					
-					<li><a href="AllDestinations.jsp">Destinations</a></li>
+					<li><a href="index.html">Home</a></li>					
+					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a class="btn" href="LogoutServlet">Logout</a></li>
 					<li><a class="btn" href="profile.html">PROFILE</a></li>
 				</ul>
@@ -60,7 +60,7 @@
 	<div class="container">
 		
 		<ol class="breadcrumb">
-			<li><a href="index.jsp">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li class="active">Profile Page</li>
 		</ol>
 
@@ -208,7 +208,7 @@ function showDestinations(){
 				}
 				
 				html+="<td>";
-				var destName = "<h5><a href=\"Destination.jsp?name="+ json[item].name +"\">" + json[item].name + "</a></h5>";
+				var destName = "<h5><a href=\"Destination.html?name="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
 				var imageLocation = "<img src=\"DestinationPictureServlet?destination="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 				html+=imageLocation;
