--- a/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
+++ b/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
@@ -25,6 +25,11 @@
 	<script src="assets/js/html5shiv.js"></script>
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
+	<script src="assets/js/checkForUser.js"></script>
+	
+	
+	
+	
 </head>
 
 <body onload="showDestinations()">
@@ -40,10 +45,9 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
-					<li><a href="AllDestinations.html">Destinations</a></li>
-					<div id="userButton">		
-					<script>checkforUser();</script>
-					</div>
+					<li><a href="AllDestinations.html">Destinations</a></li>									
+					<li id="userButton"></li>
+					<li id="secondButton"></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -176,7 +180,7 @@
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="assets/js/checkForUser.js"></script>
+	<script>checkForUser()</script>	
 </body>
 <script>
 function showDestinations(){
