--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -33,7 +33,7 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
-	
+	<script>checkForUser()</script>
 </head>
 
 
@@ -52,9 +52,8 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>							
-					<li id="userButton">		
-					<script>checkForUser()</script>
-					</li>
+					<li id="userButton"></li>
+					<li id="secondButton"></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
