--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -28,7 +28,7 @@
 	<script src="assets/js/html5shiv.js"></script>
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
-	<script>checkIfLoggedIn();</script>
+	<script>checkIfLoggedIn()</script>
 </head>
 
 <body onload="showDestinations()">
