--- a/TheTravellerBulgaria/src/main/webapp/Destination.html
+++ b/TheTravellerBulgaria/src/main/webapp/Destination.html
@@ -1,9 +1,4 @@
 
-<%@ page language="java" contentType="text/html; charset=utf-8"
-    pageEncoding="utf-8"%>
-
-<%@ page import = "java.util.ArrayList" %>
-<%@ page errorPage="Error.html"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
@@ -11,6 +6,9 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author"      content="David & Yasen">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="Expires" content="0" />
 	<title>The Traveler Bulgaria</title>
 	
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
@@ -22,6 +20,8 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="assets/css/main.css">
+	<script src="assets/js/checkForUser.js"></script>
+	<scriprt>checkIfLoggedIn()</scriprt>
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -31,15 +31,8 @@
 </head>
 
 <body>
-	<%
-   		response.addHeader("Cache-Control", "no-cache,no-store,private,must-revalidate,max-stale=0,post-check=0,pre-check=0"); 
-   		response.addHeader("Pragma", "no-cache"); 
-   		response.addDateHeader ("Expires", 0);
-  	%>
 	<!-- Fixed navbar -->
-	<%if (request.getParameter("name") == null){ %>
-		<%response.sendRedirect("AllDestinations.html"); %>
-	<%} %>
+	
 	
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
 		<div class="container">
@@ -53,9 +46,8 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
-					<div id="userButton">		
-					<script>checkforUser()</script>
-					</div>
+					<li id="userButton"></li>
+					<li id="secondButton"></li>	
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -261,7 +253,8 @@
 	</script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQKyIgPewrgRCgagA1sDItFSRZh5hZlL4&callback=myMap"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="assets/js/checkForUser.js"></script>
+
+	<script>checkforUser()</script>
 	
 </body>
 <script>
