--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -55,7 +55,7 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
-					<li><a class="btn" href="LogoutServlet">Logout</a></li>
+					<li><a class="btn" href="Logout">Logout</a></li>
 					<li><a class="btn" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
@@ -197,11 +197,11 @@
 <script>
 
 function showDestinations(){
-	
+	var user = sessionStorage.getItem('userEmail');
 	$.get(
-		"GetUserDestinations", 
+		"GetUserDestinations?user="+user, 
 		function(data){
-			var json = JSON.parse(data);
+			var json = data;
 			var html = "<header class=\"page-header\"><h1 class=\"page-title\">Visited Destinations</h1></header>";
 			html += "<table><tr>";
 			var i = 0;
@@ -214,7 +214,7 @@ function showDestinations(){
 				html+="<td>";
 				var destName = "<h5><a href=\"Destination.html?name="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
-				var imageLocation = "<img src=\"DestinationPictureServlet?destination="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
+				var imageLocation = "<img src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 				html+=imageLocation;
 				html+="</td>";
 				
