--- a/TheTravellerBulgaria/src/main/webapp/AddDestination.html
+++ b/TheTravellerBulgaria/src/main/webapp/AddDestination.html
@@ -26,7 +26,7 @@
 	<script src="assets/js/html5shiv.js"></script>
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
-	<script>checkIfLoggedIn();</script>
+
 </head>
 
 <body onLoad="initialize()">
@@ -167,7 +167,7 @@
 	<script src="js/PictureValidate.js"></script>
 	<script src="http://malsup.github.com/jquery.form.js"></script> 
 	<script src="assets/js/checkForUser.js"></script>
-	
+	<script>checkIfLoggedIn()</script>
 	<!-- Google Maps -->
 	
 	
@@ -192,15 +192,15 @@ function add(){
 }
 	
 function showMessage(results){
-        if(results == 'Destination Registration Successful!'){
-            $('#message').html("<font color='green'>Destination successfully added. </font>")
-            setTimeout(function(){
-					window.location.href = "AllDestinations.html";
-				}, 500)
-        }else if(results == 'Destination registration failed!'){
-            $('#message').html("<font color='red'>Incorrect data or picture format! </font>")
-        }
-    }
+      if(results == 'Destination Registration Successful!'){
+          $('#message').html("<font color='green'>Destination successfully added. </font>")
+          setTimeout(function(){
+			window.location.href = "AllDestinations.html";
+		}, 500)
+      }else if(results == 'Destination registration failed!'){
+          $('#message').html("<font color='red'>Incorrect data or picture format! </font>")
+      }
+ }
 </script>
 </html>
 
