--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author"      content="David & Yasen">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-stale=0,post-check=0,pre-check=0" />
+	<meta http-equiv="Cache-Control" content="no-cache,no-store,private,must-revalidate,max-stale=0,post-check=0,pre-check=0" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
 	
@@ -33,12 +33,12 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
-	<script>checkForUser()</script>
+	
 </head>
 
 
      
-<body class="home">
+<body class="home" >
 	<script>$.get("initializeManager")</script>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
@@ -50,7 +50,8 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.html">Home</a></li>					
+					<li><a href="index.html">Home</a></li>
+					<li id="newsFeed"></li>	
 					<li><a href="AllDestinations.html">Destinations</a></li>							
 					<li id="userButton"></li>
 					<li id="secondButton"></li>
@@ -251,7 +252,7 @@
 
 
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-	
+	<script>checkForUser()</script>
 	
 </body>
 
