--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -195,11 +195,11 @@ $(function loadFeed(){
 				var userVisited = data[i+1];
 				html+="<td>";
 				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a></h4>";
-				html+="<img src=\"GetProfilePicture?email="+ userVisited.email +"\"height=\"60\" width=\"60\"/>";
+				html+="<img src=\"GetProfilePicture?email="+ userVisited.email +"\"height=\"100\" width=\"100\"/>";
 				html+="</td>";
 				html+="<td>";
-				html+="<h4>  has visited  "+ place.name +"</h4>";
-				html+="<img src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"200\"/>"
+				html+="<h4>&nbsp  has visited  "+ place.name +"</h4>";
+				html+="<img src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"250\"/>"
 				html+="</td>";
 				html+="</tr>";
 				html+="<tr>";
