--- a/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
+++ b/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
@@ -27,6 +27,12 @@
 	<![endif]-->
 	<script src="assets/js/checkForUser.js"></script>
 	
+	<style> 
+		.destination-main-picture {
+	   		max-height: 150px;
+    		width: auto;
+		}
+	</style>
 	
 	
 	
@@ -201,7 +207,7 @@ $(function showDestinations(){
 				html+="<td>";
 				var destName = "<h5 id=\"tempDestName\"><a class=\"btn\" href=\"Destination.html?destinationName="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
-				var imageLocation = "<img src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
+				var imageLocation = "<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"250\"/>";
 				html+=imageLocation;
 				html+="</td>";
 				
