--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -38,6 +38,13 @@
 	<script>checkIfLoggedIn()</script>
 	<script>getUserInfo()</script>
 	
+	<style> 
+		.destination-main-picture {
+	   		max-height: 150px;
+    		width: auto;
+		}
+	</style>
+	
 </head>
 
 <body onload="showDestinations()">
@@ -214,7 +221,7 @@ function showDestinations(){
 				html+="<td>";
 				var destName = "<h5><a href=\"Destination.html?destinationName="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
-				var imageLocation = "<img src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
+				var imageLocation = "<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 				html+=imageLocation;
 				html+="</td>";
 				
