--- a/TheTravellerBulgaria/src/main/webapp/Destination.html
+++ b/TheTravellerBulgaria/src/main/webapp/Destination.html
@@ -103,6 +103,7 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
+					<li id="newsFeed"></li>
 					<li id="userButton"></li>
 					<li id="secondButton"></li>	
 				</ul>
