--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -50,6 +50,7 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
+					<li><a href="NewsFeed.html">News Feed</a></li>
 					<li><a class="btn" onclick="logOut()">Logout</a></li>
 					<li><a class="btn" href="profile.html">PROFILE</a></li>
 				</ul>
