--- a/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
+++ b/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
@@ -51,7 +51,8 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
-					<li><a href="AllDestinations.html">Destinations</a></li>									
+					<li><a href="AllDestinations.html">Destinations</a></li>
+					<li id="newsFeed"></li>									
 					<li id="userButton"></li>
 					<li id="secondButton"></li>
 				</ul>
@@ -214,7 +215,6 @@ $(function showDestinations(){
 				i++;
 			}
 			html += "</tr></table>";
-			console.log(html);
 			document.getElementById("allDestinations").innerHTML = html;
 		}		
 	)
