--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -62,7 +62,8 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
-					<li><a class="btn" href="Logout">Logout</a></li>
+					<li><a href="NewsFeed.html">News Feed</a></li>
+					<li><a class="btn" href="logout()">Logout</a></li>
 					<li><a class="btn" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
