--- a/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
+++ b/TheTravellerBulgaria/src/main/webapp/AllDestinations.html
@@ -29,8 +29,8 @@
 	
 	<style> 
 		.destination-main-picture {
-	   		max-height: 150px;
-    		width: auto;
+	   		max-height: auto;
+    		width: 300px;
 		}
 	</style>
 	
@@ -208,7 +208,7 @@ $(function showDestinations(){
 				html+="<td>";
 				var destName = "<h5 id=\"tempDestName\"><a class=\"btn\" href=\"Destination.html?destinationName="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
-				var imageLocation = "<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"250\"/>";
+				var imageLocation = "<a href=\"Destination.html?destinationName="+ json[item].name +"\"> <img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" />";
 				html+=imageLocation;
 				html+="</td>";
 				
