--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -206,6 +206,7 @@
 
 function showDestinations(){
 	var user = sessionStorage.getItem('userEmail');
+	
 	$.get(
 		"GetUserDestinations?user="+user, 
 		function(data){
@@ -222,7 +223,7 @@ function showDestinations(){
 				html+="<td>";
 				var destName = "<h5><a href=\"Destination.html?destinationName="+ json[item].name +"\">" + json[item].name + "</a></h5>";
 				html += destName;
-				var imageLocation = "<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
+				var imageLocation = "<a href=\"Destination.html?destinationName="+ json[item].name +"\"> <img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 				html+=imageLocation;
 				html+="</td>";
 				
