--- a/TheTravellerBulgaria/src/main/webapp/SignUp.html
+++ b/TheTravellerBulgaria/src/main/webapp/SignUp.html
@@ -209,7 +209,7 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
-	<script src="js/PictureValidate.js"></script>
+	<script src="assets/js/PictureValidate.js"></script>
 	<script src="http://malsup.github.com/jquery.form.js"></script> 
 	<script src="assets/js/checkForUser.js"></script>
 </body>
