Add to Visited added, News Feed changed, Add Picture Fixed, minor bugs fixed.

--- a/TheTravellerBulgaria/src/main/webapp/AddDestination.html
+++ b/TheTravellerBulgaria/src/main/webapp/AddDestination.html
@@ -45,8 +45,8 @@
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
-					<li><a class="btn" onclick="logOut()">Logout</a></li>
-					<li><a class="btn" href="profile.html">PROFILE</a></li>
+					<li><a class="btnc" onclick="logOut()">Logout</a></li>
+					<li><a class="btnc" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
