--- a/TheTravellerBulgaria/src/main/webapp/SignUp.html
+++ b/TheTravellerBulgaria/src/main/webapp/SignUp.html
@@ -39,7 +39,7 @@
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="AllDestinations.html">Destinations</a></li>
-					<li class="active"><a class="btn" href="SignIn.html">SIGN IN / SIGN UP</a></li>
+					<li class="active"><a class="btnc" href="SignIn.html">SIGN IN / SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
