--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -67,8 +67,8 @@
 			<div class="row">
 				<h1 class="lead">The Traveler Bulgaria</h1>
 				
-				<p><a class="btn btn-default btn-lg" href="SectionUnderConstructionPage.html">View Top Destinations</a> 
-				<a class="btn btn-action btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
+				<p><a class="btnc btn-default btn-lg" href="SectionUnderConstructionPage.html">View Top Destinations</a> 
+				<a class="btnc btn-action btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
 
 			</div>
 		</div>
