--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -40,8 +40,8 @@
 	
 	<style> 
 		.destination-main-picture {
-	   		max-height: 150px;
-    		width: auto;
+	   		height: 150px;
+    		width: 150px;
 		}
 	</style>
 	
@@ -63,8 +63,8 @@
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
-					<li><a class="btn" href="logout()">Logout</a></li>
-					<li><a class="btn" href="profile.html">PROFILE</a></li>
+					<li><a class="btnc" href="logOut()">Logout</a></li>
+					<li><a class="btnc" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
