--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -22,6 +22,67 @@
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="assets/css/main.css">
 
+	<style>
+		
+		.my-table {
+			width: 100%;
+			text-align: left;			
+			background: rgb(255,255,255);
+			background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(243,243,243,1) 50%, rgba(237,237,237,1) 51%, rgba(255,255,255,1) 100%);
+			background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%);
+			background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 );
+		}
+		
+		
+		.my-table td {
+			padding:0px 15px;
+			vertical-align: top;
+		}
+		
+		.my-table .username {
+			float: left;
+			line-height: inherit;
+			color: #09c;
+			font-style: normal;
+			font-size: 14px;
+		}
+		
+		.my-table td:last-child {
+			border: 1px solid #ddd;
+			padding-bottom: 15px;
+			
+		}
+		
+		.my-table h6 {
+			text-align: right;
+			color: #777;
+			font-style: italic;
+		}
+		
+		.my-table .btn {
+			padding: 5px 40px;
+			background: rgba(15, 114, 185, 0.92);
+			color: white;
+		}
+		
+		.destination-main-picture {
+	   		width: 200px;
+    		height: auto;
+    		float: right;
+		}
+		
+		.profilePicture{
+			width : 80px;
+			height : 80px;
+			float: left;
+			border-radius: 50%;
+		}
+
+		
+		
+	</style>
+	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -51,8 +112,8 @@
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
-					<li><a class="btn" onclick="logOut()">Logout</a></li>
-					<li><a class="btn" href="profile.html">PROFILE</a></li>
+					<li><a class="btnc" onclick="logOut()">Logout</a></li>
+					<li><a class="btnc" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -189,20 +250,21 @@ $(function loadFeed(){
 	$.get(
 		"GetPlacesForNewsFeed",
 		function(data){
-			var html = "<table>";
+			var html = "<table class=\"my-table\">";
 			html+="<tr>";
-			for (var i = 0; i < data.length; i+=2) {
+			for (var i = 0; i < data.length; i+=3) {
 				var place = data[i];
 				var userVisited = data[i+1];
+				var dateTime = data[i+2];
 				html+="<td>";
-				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a></h4>";
-				html+="<img src=\"GetProfilePicture?email="+ userVisited.email +"\"height=\"100\" width=\"100\"/>";
-				html+="</td>";
-				html+="<td>";
-				html+="<h4>&nbsp  has visited  "+ place.name +"</h4>";
-				html+="<img src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"250\"/>"
-				html+="</td>";
+				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a> has visited "+ "<a href=Destination.html?destinationName="+ place.name +">"+ place.name +"</a>" +"</h4>";
+				html+="<h6>Visited on "+dateTime+"<h6>";
+				html+="<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"250\"/>"
+				html+="<img class=\"profilePicture\" src=\"GetProfilePicture?email="+ userVisited.email +"\"height=\"100\" width=\"100\"/>";
+				
+				html+="</td>";			
 				html+="</tr>";
+				
 				html+="<tr>";
 			}
 			html+="</tr>";
