--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -21,7 +21,7 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="assets/css/main.css">
-
+	<link rel="stylesheet" href="assets/css/search.css">
 	<style>
 		
 		.my-table {
@@ -109,6 +109,14 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
+				<li>
+					<div class="button_box2">
+						<form class="form-wrapper-2 cf">
+							<input type="text" placeholder="Search here..." required>
+							<button type="submit">Search</button>
+						</form>
+					</div>
+					</li>
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
