--- a/TheTravellerBulgaria/src/main/webapp/profile.html
+++ b/TheTravellerBulgaria/src/main/webapp/profile.html
@@ -63,7 +63,7 @@
 					<li><a href="index.html">Home</a></li>					
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
-					<li><a class="btnc" href="logOut()">Logout</a></li>
+					<li><a class="btnc" onclick="logOut()">Logout</a></li>
 					<li><a class="btnc" href="profile.html">PROFILE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
