--- a/TheTravellerBulgaria/src/main/webapp/SectionUnderConstructionPage.html
+++ b/TheTravellerBulgaria/src/main/webapp/SectionUnderConstructionPage.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <title>The Traveler Bulgaria</title>
  <link rel="shortcut icon" href="assets/images/gt_favicon.png">
+ <script src="assets/js/checkForUser.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script src="assets/js/headroom.min.js"></script>
+	<script src="assets/js/jQuery.headroom.min.js"></script>
+	<script src="assets/js/template.js"></script>
+	<script type="text/javascript">
+
+	window.location.href = "index.html";
+
+	</script>
+	
 </head>
 <body>
 <div class="fill-screen">
@@ -66,4 +78,9 @@
   </form>
 </div>
 </body>
+<script>
+
+
+
+</script>
 </html>
