--- a/TheTravellerBulgaria/src/main/webapp/Comment.html
+++ b/TheTravellerBulgaria/src/main/webapp/Comment.html
@@ -21,7 +21,7 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="assets/css/main.css">
-
+	<link rel="stylesheet" href="assets/css/search.css">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -43,6 +43,14 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
+				<li>
+					<div class="button_box2">
+						<form class="form-wrapper-2 cf" action="SearchResults.html">
+							<input type="text" name="search" placeholder="Search here..." required>
+							<button type="submit">Search</button>
+						</form>
+					</div>
+					</li>
 					<li><a href="index.html">Home</a></li>				
 					<li><a href="AllDestinations.html">Destinations</a></li>
 					<li><a href="NewsFeed.html">News Feed</a></li>
