--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -78,6 +78,26 @@
 			float: left;
 			border-radius: 50%;
 		}
+		
+		.bg-img-c {
+			-webkit-background-size: cover;
+			background-size: cover;
+			background-position: center;
+		}
+		.img {
+			display: inline-block;
+		 }
+		.img:before {
+			content: '';
+			display: block;
+			padding-top: 75%;
+		}
+		.img.square:before {
+			padding-top: 100%;
+		}
+		.img.round {
+			border-radius: 50%;
+		}
 
 		
 		
@@ -260,7 +280,8 @@ $(function loadFeed(){
 				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a> has visited "+ "<a href=Destination.html?destinationName="+ place.name +">"+ place.name +"</a>" +"</h4>";
 				html+="<h6>Visited on "+dateTime+"<h6>";
 				html+="<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"250\"/>"
-				html+="<img class=\"profilePicture\" src=\"GetProfilePicture?email="+ userVisited.email +"\"height=\"100\" width=\"100\"/>";
+				var src = "GetProfilePicture?email="+ userVisited.email;
+				html+= "<div class=\"round img bg-img-c square profilePicture\" style=\"background-image: url("+src+")\"></div>";
 				
 				html+="</td>";			
 				html+="</tr>";
