minor bugs fixed

--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -271,7 +271,7 @@ $(function loadFeed(){
 				html+="</td>";			
 				html+="</tr>";				
 				html+="<tr>";
-				destInfo+="<li><a href=\"Destination.html?destinationName"+ place.name +"\">"+ place.name +"</a><br><span class=\"small text-muted\">"+ place.description +"</span></li>";
+				destInfo+="<li><a href=\"Destination.html?destinationName="+ place.name +"\">"+ place.name +"</a><br><span class=\"small text-muted\">"+ place.description +"</span></li>";
 				
 			}
 			html+="</tr>";
