--- a/TheTravellerBulgaria/src/main/webapp/foreignProfile.html
+++ b/TheTravellerBulgaria/src/main/webapp/foreignProfile.html
@@ -293,7 +293,7 @@ $(function showProfile(){
 			var json = data;
 			document.getElementById("fullName").innerHTML = json.firstName + " " + json.lastName;
 			document.getElementById("description").innerHTML = json.description;
-			var src = "GetProfilePicture?email="+ json.email;
+			var src = ("GetProfilePicture?email="+ json.email).replace(" ", "%20");
 			document.getElementById("profilePicture").innerHTML = "<div class=\"round img bg-img-c square\" style=\"width: 150px; background-image: url("+src+")\"></div>";
 		}
 	).then(function(data){
@@ -318,7 +318,7 @@ $(function showProfile(){
 					//var imageLocation = "<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ json[item].name +"\" height=\"150\" width=\"150\"/>";
 					//html+=imageLocation;
 					
-					var src = "getDestinationMainPicture?destinationName="+ json[item].name;
+					var src = ("getDestinationMainPicture?destinationName="+ json[item].name).replace(" ", "%20");
 					html +="<a href=\"Destination.html?destinationName="+ json[item].name +"\">";
 					html +="<div class=\"img bg-img-c\" style=\"width: 250px; background-image: url("+src+")\"></div></a>";
 					
