--- a/TheTravellerBulgaria/src/main/webapp/AddPicture.html
+++ b/TheTravellerBulgaria/src/main/webapp/AddPicture.html
@@ -204,6 +204,9 @@
 		function submitPic(){
 			
 			var form = $("#addPictureF");
+			if(!Validate(form)){
+				return;
+			};
 			form.ajaxSubmit({
 				type : 'post',
 				url : 'AddPic',
