--- a/TheTravellerBulgaria/src/main/webapp/Comment.html
+++ b/TheTravellerBulgaria/src/main/webapp/Comment.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE  PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -205,7 +205,7 @@
 	
 	
 <script>
-
+var destinationName = decodeURIComponent(location.search.split("destinationName=")[1]);
 var params = location.search.substr(1).split("&").reduce(function(acc, element){
 	element=element.split("=");
 	acc[element[0]]=element[1];
@@ -215,13 +215,13 @@ var params = location.search.substr(1).split("&").reduce(function(acc, element){
 $('[name="destinationName"]').val(params.destinationName)
 
 $(function shareExperienece(){
-	document.getElementById("shareExperience").innerHTML="Share your experience in "+params.destinationName;
+	document.getElementById("shareExperience").innerHTML="Share your experience in "+destinationName;
 })
 
 
 function addComment(){
 	
-	var destinationName = location.search.split('destinationName=')[1];
+	
 	
 	var form = $("#addCommentForm");
 	
@@ -245,7 +245,7 @@ function addComment(){
 }
 	
 function showMessage(results){
-	var destinationName = location.search.split('destinationName=')[1];
+	
       if(results == 'Comment adding successful!'){
           $('#message').html("<font color='green'>Comment successfully added. </font>")
           setTimeout(function(){
@@ -259,7 +259,7 @@ function showMessage(results){
  
  $(
 	function() {
-		$("#destinationPicture").html('<img src="getDestinationMainPicture?destinationName='+params.destinationName+'"/>')
+		$("#destinationPicture").html('<img src="getDestinationMainPicture?destinationName='+destinationName+'"/>')
 	}		 
  )
  
