All unnecessary lables and icons removed

--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -162,10 +162,7 @@
 			</div>
 		</div> <!-- /row -->
 
-		<div class="jumbotron top-space">
-			<h4>The Traveler Bulgaria supports the Keep Inspiring Initiative. To learn more about it click on the button!</h4>
-     		<p class="text-right"><a class="btn btn-primary btn-large" href="SectionUnderConstructionPage.html">Learn more »</a></p>
-  		</div>
+		
 
 </div>	<!-- /container -->
 	
@@ -205,16 +202,14 @@
 					</div>
 
 					<div class="col-md-3 widget">
-						<h3 class="widget-title">Follow us</h3>
-						<div class="widget-body">
-							<p class="follow-me-icons">
-								<a href=""><i class="fa fa-twitter fa-2"></i></a>
-								<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-								<a href=""><i class="fa fa-github fa-2"></i></a>
-								<a href="https://www.facebook.com/TheTravellerBulgaria/"><i class="fa fa-facebook fa-2"></i></a>
-							</p>	
-						</div>
-					</div>
+                        <h3 class="widget-title">Follow us</h3>
+                        <div> <h5> on Facebook</h5>  </div>
+                        <div class="widget-body">
+                            <p class="follow-me-icons">
+                                 <a href="https://www.facebook.com/TheTravellerBulgaria/"><i class="fa fa-facebook fa-2"></i></a>
+                            </p>    
+                        </div>
+                    </div>
 
 					<div class="col-md-6 widget">
 						<h3 class="widget-title">Our motto</h3>
@@ -232,19 +227,7 @@
 			<div class="container">
 				<div class="row">
 					
-					<div class="col-md-6 widget">
-						<div class="widget-body">
-							<p class="simplenav">
-								<a href="#">Home</a> | 
-								<a href="SectionUnderConstructionPage.html">About</a> |
-								<a href="SectionUnderConstructionPage.html">Sidebar</a> |
-								<a href="SectionUnderConstructionPage.html">Contact</a> |
-								<b><a href="SignUp.html">Sign up</a></b>
-							</p>
-						</div>
-					</div>
-
-					<div class="col-md-6 widget">
+					<div class="col-md-6 widget" style="float:right;">
 						<div class="widget-body">
 							<p class="text-right">
 								Copyright &copy; 2016, The Traveler Bulgaria. Designed by David & Yasen</a> 
