--- a/TheTravellerBulgaria/src/main/webapp/SearchResults.html
+++ b/TheTravellerBulgaria/src/main/webapp/SearchResults.html
@@ -215,12 +215,10 @@
 
                     <div class="col-md-3 widget">
                         <h3 class="widget-title">Follow us</h3>
+                        <div> <h5> on Facebook</h5>  </div>
                         <div class="widget-body">
                             <p class="follow-me-icons">
-                                <a href=""><i class="fa fa-twitter fa-2"></i></a>
-                                <a href=""><i class="fa fa-dribbble fa-2"></i></a>
-                                <a href=""><i class="fa fa-github fa-2"></i></a>
-                                <a href="https://www.facebook.com/TheTravellerBulgaria/"><i class="fa fa-facebook fa-2"></i></a>
+                                 <a href="https://www.facebook.com/TheTravellerBulgaria/"><i class="fa fa-facebook fa-2"></i></a>
                             </p>    
                         </div>
                     </div>
@@ -238,32 +236,20 @@
         </div>
 
 		<div class="footer2">
-            <div class="container">
-                <div class="row">
-                    
-                    <div class="col-md-6 widget">
-                        <div class="widget-body">
-                            <p class="simplenav">
-                                <a href="#">Home</a> | 
-                                <a href="SectionUnderConstructionPage.html">About</a> |
-                                <a href="SectionUnderConstructionPage.html">Sidebar</a> |
-                                <a href="SectionUnderConstructionPage.html">Contact</a> |
-                                <b><a href="SignUp.html">Sign up</a></b>
-                            </p>
-                        </div>
-                    </div>
+			<div class="container">
+				<div class="row">
+					
+					<div class="col-md-6 widget" style="float:right;">
+						<div class="widget-body">
+							<p class="text-right">
+								Copyright &copy; 2016, The Traveler Bulgaria. Designed by David & Yasen</a> 
+							</p>
+						</div>
+					</div>
 
-                    <div class="col-md-6 widget">
-                        <div class="widget-body">
-                            <p class="text-right">
-                                Copyright &copy; 2016, The Traveler Bulgaria. Designed by David & Yasen</a> 
-                            </p>
-                        </div>
-                    </div>
-
-                </div> <!-- /row of widgets -->
-            </div>
-        </div>
+				</div> <!-- /row of widgets -->
+			</div>
+		</div>
 
     </footer>
 		
