Добавена кирилица майна

--- a/TheTravellerBulgaria/src/main/webapp/AddDestination.html
+++ b/TheTravellerBulgaria/src/main/webapp/AddDestination.html
@@ -119,7 +119,7 @@
 		       						<option value="LAKES">
 		       						<option value="CITIES">
 		       						<option value="RURAL_AREAS">
-		       						<option value="CAMPCITIES">
+		       						<option value="CAMPSITES">
 		       					</datalist>
 		        			    
 		       				</div>
