--- a/TheTravellerBulgaria/src/main/webapp/Destination.html
+++ b/TheTravellerBulgaria/src/main/webapp/Destination.html
@@ -393,7 +393,7 @@
 		return acc;
 	}, {});
 	var destinationName = decodeURIComponent(location.search.split('destinationName=')[1]);
-	$('[name="destinationName"]').val(params.destinationName)
+	$('[name="destinationName"]').val(destinationName)
 	
 		$(function showDestination(){
 			
@@ -660,7 +660,7 @@ function dislikeComment(commentId) {
 
 
 function addToVisited(){
-	var destinationName = location.search.split('destinationName=')[1];
+	
 	$.post(
 		"addToVisited",
 		{destinationName : destinationName},
@@ -681,7 +681,7 @@ function addToVisited(){
 }	
 	
 $(function isVisited(){
-	var destinationName = location.search.split('destinationName=')[1];
+	
 	$.get(
 		"isVisited",
 		{destinationName : destinationName},
@@ -721,7 +721,7 @@ function showGallery(){
 	<script>
 	function myMap() {
 			
-		$.get("getDestination?destinationName=" + params.destinationName)
+		$.get("getDestination?destinationName=" + destinationName)
 		.then (
 			function (destination) {
 				
