--- a/TheTravellerBulgaria/src/main/webapp/Comment.html
+++ b/TheTravellerBulgaria/src/main/webapp/Comment.html
@@ -212,7 +212,7 @@ var params = location.search.substr(1).split("&").reduce(function(acc, element){
 	return acc;
 }, {});
 
-$('[name="destinationName"]').val(params.destinationName)
+$('[name="destinationName"]').val(destinationName)
 
 $(function shareExperienece(){
 	document.getElementById("shareExperience").innerHTML="Share your experience in "+destinationName;
