--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -283,7 +283,7 @@ $(function loadFeed(){
 				var userVisited = data[i+1];
 				var dateTime = data[i+2];
 				html+="<td>";
-				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a> has visited "+ "<a href=Destination.html?destinationName="+ place.name +">"+ place.name +"</a>" +"</h4>";
+				html+="<h4><a href=\"foreignProfile.html?userEmail=" + userVisited.email + "\">" + userVisited.firstName + " " + userVisited.lastName +"</a> has visited "+ "<a href=Destination.html?destinationName="+ (place.name).split(" ").join("%20") +">"+ place.name +"</a>" +"</h4>";
 				html+="<h6>Visited on "+dateTime+"<h6>";
 				html+="<img class=\"destination-main-picture\" src=\"getDestinationMainPicture?destinationName="+ place.name +"\"height=\"100\" width=\"250\"/>"
 				var src = ("GetProfilePicture?email="+ userVisited.email).replace(" ", "%20");
