--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -35,8 +35,6 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
-	
-	
 </head>
 
 
@@ -246,8 +244,8 @@
 
 
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-	<script>checkForUser()</script>
+	
 	
 </body>
-
+	<script>$(checkForUser())</script>
 </html>
